2003-05-15  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/Makefile.am:
	Added new files.
	
	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	* libnautilus-private/nautilus-global-preferences.[ch]:
	New prefs for home and trash links.
	
	* libnautilus-private/nautilus-desktop-directory.[ch]:
	New files. Implements the NautilusDesktop object for the
	virtual x-nautilus-desktop: uri. The directory merges the contents
	of the directory with the real desktop directory.
	
	* libnautilus-private/nautilus-desktop-directory-file.[ch]:
	New files. Implements the Nautilusfile corresponding to
	NautilusDestkopDirectory.
	
	* libnautilus-private/nautilus-desktop-icon-file.[ch]:
	New files.
	Implement NautilusFile for a virtual file in a NautilusDesktopDirectory.
	Gets all the actual file data from a NautilusDesktopLink.

	* libnautilus-private/nautilus-desktop-link-monitor.[ch]:
	New files.
	Keep track of home and trash visibility prefs and mounted volumes and
	create/destroy corresponding NautilusDesktopLink object.
	
	* libnautilus-private/nautilus-desktop-link.[ch]:
	New files.
	Keeps track of all the real information in a desktop icon link.
	These are home, trash and volume links at the moment.
	
	* libnautilus-private/nautilus-directory-async.c:
	Indentation correction.
	
	* libnautilus-private/nautilus-directory.c:
	(nautilus_directory_new):
	Create NautilusDesktopDirectory objects for x-nautilus-desktop: uris
	
	* libnautilus-private/nautilus-dnd.c: (nautilus_drag_items_local):
	Handle NULL GnomeVFSURIs.
	(nautilus_drag_items_on_desktop): New function to check if items
	are on the desktop.
	(nautilus_drag_default_drop_action_for_icons):
	Special case desktop uris.
	(nautilus_drag_selection_includes_special_link):
	Convert from old-style special links to current.
	
	* libnautilus-private/nautilus-dnd.h:
	New function nautilus_drag_items_on_desktop.
	
	* libnautilus-private/nautilus-file-operations.c: