@@ -253,13 +253,14 @@ draw_number (GtkWidget *widget, GdkRectangle *box)
 		cur_char = &buffer[0];		
 		while (*cur_char) {
 			char_offset = (*cur_char++ - '0') * char_width;
-			gdk_pixbuf_render_to_drawable_alpha (number_pixbuf,
-							     widget->window, 
-							     char_offset, 0, x, y,
-							     char_width,
-							     char_height,
-							     GDK_PIXBUF_ALPHA_BILEVEL, 128, GDK_RGB_DITHER_MAX,
-							     0, 0);
+			gdk_draw_pixbuf (widget->window,
+					 NULL,
+					 number_pixbuf,
+					 char_offset, 0, x, y,
+					 char_width,
+					 char_height,
+					 GDK_RGB_DITHER_MAX,
+					 0, 0);
 			x += char_width;
 		}
 	
@@ -289,11 +290,11 @@ draw_number (GtkWidget *widget, GdkRectangle *box)
 static void
 draw_pixbuf (GdkPixbuf *pixbuf, GdkDrawable *drawable, int x, int y)
 {
-	gdk_pixbuf_render_to_drawable_alpha (pixbuf, drawable, 0, 0, x, y,
-					     gdk_pixbuf_get_width (pixbuf),
-					     gdk_pixbuf_get_height (pixbuf),
-					     GDK_PIXBUF_ALPHA_BILEVEL, 128, GDK_RGB_DITHER_MAX,
-					     0, 0);
+	gdk_draw_pixbuf (drawable, NULL, pixbuf, 0, 0, x, y,
+			 gdk_pixbuf_get_width (pixbuf),
+			 gdk_pixbuf_get_height (pixbuf),
+			 GDK_RGB_DITHER_MAX,
+			 0, 0);
 }
 
 static void
